tests/miz/fail/types/fail_type_elaboration_imported_type_case_struct_gap_001.miz
import parser.type_fixtures;
reserve s for TypeCaseStruct;
